--- a/echosphere.html
+++ b/echosphere.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ECHOSPHERE - Tiffany Lee</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Instrument+Sans:ital,wght@0,100;0,400;0,500;0,600;0,700;1,100;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <style>
         body {
@@ -15,14 +18,14 @@
             align-items: center;
             justify-content: center;
             min-height: 100vh;
-            font-family: 'Instrument Sans', sans-serif;
+            font-family: 'Arial';
         }
         .project-title {
             color: #FEC307;
             font-size: 4rem;
-            font-weight: 400;
+            font-weight: 100;
             text-transform: uppercase;
-            letter-spacing: -0.03em;
+            letter-spacing: -0.04em;
         }
     </style>
 </head>
