Replace Instagram and Resume text with icons, update links, and adjust layout

--- a/index.html
+++ b/index.html
@@ -22,6 +22,16 @@
     <!-- Shared Navigation -->
     <div id="navigation-container"></div>
     
+    <!-- Social Links -->
+    <div class="social-links">
+        <a href="https://www.instagram.com/t._.lee/" target="_blank" rel="noopener noreferrer" class="social-link" id="instagram-link">
+            <img src="film/insta.svg" alt="Instagram" class="social-icon">
+        </a>
+        <a href="https://drive.google.com/file/d/19-QpUML39XKgmb6vITHpdXuYa7F-C5OUmThkyjTBkP0/view" target="_blank" rel="noopener noreferrer" class="social-link" id="resume-link">
+            <img src="film/resumeicon.svg" alt="Resume" class="social-icon">
+        </a>
+    </div>
+    
     <!-- First Section - Logo -->
     <section class="scroll-section">
         <main class="main-content">
